// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NativeDatePicker should match the snapshot 1`] = `
<NativeDatePicker__StyledWrapper>
  <NativeDatePicker__StyledLabel />
  <NativeDatePicker__StyledInput
    type="date"
  />
</NativeDatePicker__StyledWrapper>
`;

exports[`NativeDatePicker should match the snapshot when labeled 1`] = `
<NativeDatePicker__StyledWrapper>
  <NativeDatePicker__StyledLabel>
    Label
  </NativeDatePicker__StyledLabel>
  <NativeDatePicker__StyledInput
    type="date"
  />
</NativeDatePicker__StyledWrapper>
`;
